--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,8 @@ dependencies {
     implementation "io.insert-koin:koin-androidx-navigation:$koin_android_version"
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 }
