--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    namespace 'com.vitorhr.basicandroidsetup'
+    namespace 'com.vitorhr.gorestaurant'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.vitorhr.basicandroidsetup"
-        minSdk 21
+        applicationId "com.vitorhr.gorestaurant"
+        minSdk 29
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -32,6 +32,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
 }
 
@@ -61,4 +62,10 @@ dependencies {
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    // Material Design
+    implementation 'com.google.android.material:material:1.7.0'
+
+    // RecyclewView
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 }
