--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,30 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BasicAndroidSetup"
+        android:theme="@style/Theme.GoRestaurant"
         tools:targetApi="31">
         <activity
             android:name=".ui.MainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_splash">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_login">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ui.splash.SplashActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.BasicAndroidSetup.NoActionBar">
+            android:noHistory="true"
+            android:theme="@style/Theme.GoRestaurant.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
